# GVM

./: .gitignore  .gitmodules  README.md  build_test.sh  setup  test_eviction_notice.cu
app/: .gitignore
csrc/: CMakeLists.txt
csrc/custom_allocator/: Makefile  uvm_allocator.cpp
csrc/custom_cuda_lib/: CMakeLists.txt  Makefile  cuda_func_caller.cpp  cuda_func_caller.hpp  cuda_function_types.h  cuda_utils.hpp  custom_cuda.cpp  logging.cpp  logging.hpp  memory_manager.cpp  memory_manager.h  memory_manager.hpp
csrc/libgvmdrv/: .gitignore  CMakeLists.txt  Makefile  README.md  gvmdrv.cpp  gvmdrv.h  gvmdrv_ioctl.h  gvmdrv_log.cpp  gvmdrv_log.h
csrc/libgvmdrv/test/: run_tests.sh  test.cpp  test_advanced.cpp  test_basic.cpp
csrc/scheduler_prototype/: CMakeLists.txt  README.md  build.sh  set_env.sh
csrc/scheduler_prototype/include/cuda-interception/: cuda_helper.h  cuda_originals.h  cuda_subset.h  dlsym_hook.h  nvml_helper.h  nvml_subset.h
csrc/scheduler_prototype/include/scheduler/: scheduler.h
csrc/scheduler_prototype/scripts/: README.md  find_new_lib.sh  generate_cuda_name_list.sh  generate_cuda_wrappers.py  generate_dlsym_hooks.py  generate_header_file.py  generate_nvml_name_list.sh
csrc/scheduler_prototype/src/cuda-interception/: cuda_originals.c  dlsym_hook.c  loader.c  nvml_entry.c
csrc/scheduler_prototype/src/scheduler/: scheduler.c
csrc/scheduler_prototype/test/: cuda_driver_api_example.cpp  kernel.cu  simple_cuda_runtime.cu  test.py
exp/utils/: gvm_utils.sh  setup_scheduler.sh  vllm-patch
exp/vllm+diffusion/: .gitignore  README.md  bench_diffusion_mem.sh  config_gvm.sh  diffusion.py  run_all.sh  start_diffusion.sh  start_vllm_server.sh
exp/vllm+diffusion/plots/: memory_current_log.csv  monitor_memory_current.sh  motiv_mem_perf_study.py  motiv_memory_study.py  motiv_perf_study.py
exp/vllm+diffusion/swap_analysis/: README.md  plot_swap_breakdown.py  run_swap_analysis.sh
exp/vllm+llama-factory/: .gitignore  llama3_full_sft.yaml  llama3_lora_sft.yaml  start_llama_factory.sh  start_vllm_client.sh  start_vllm_server.sh
playground/1gpu-training/: llama3_full_sft.yaml
playground/diffusion_inference/: .gitignore  README.md  diffusion.py  inference_sd3.5_large.py  launch_xserver.sh  run_xsched_both.sh  run_xsched_hp.sh  run_xsched_lp.sh
playground/gpu_heavy_kernel/: gemm.py  persistent_h100-2.cu  persistent_h100.cu  sleep.cu
playground/gpuapp/: .gitignore  alloconly.cu  blocked.cu  calconly.cu  malloc.cu  mbench.cu  minimal.cu  multistream.cu  opchannel.cu  persistent.cu  swapout.cu  vector.cu
scripts/: requirements.txt  set_hugepage.sh  setup.sh  vllm-v0.10.1.patch
test/: test_uvm_allocator.py
